--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main id="main-content">
         <section class="content">
             <h2>Works</h2>
-            <p>Oops ! Looks like this page is taking a break. Stay tuned for updates !</p>
+            <p>Oops ! Looks like this page is still under development. Stay tuned for future updates !</p>
             <a href="about.html" class="btn">Learn more</a>
         </section>
     </main>
