navigation entre pages
navigation avec les touches latérales de la souris possible

--- a/about.html
+++ b/about.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nats - About</title>
+    <title>Nats - Biographie</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>About</h1>
+        <h1>Biographie</h1>
     </header>
     
     <main id="main-content">
         <section class="content">
-            <h2>About Me</h2>
-            <p>I'm Nats, and I'm passionate about music production, video interpolation, and coding. Fluent in French, I enjoy blending creativity with technical expertise to bring ideas to life across various mediums.</p>
-            <a href="index.html" class="btn">Home</a>
+            <h2>A Propos de Moi</h2>
+            <p>Aucune biographie pour le moment.</p>
+            <a href="index.html" class="btn">Accueil</a>
             <a href="contact.html" class="btn">Contact</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Nats. All rights reserved.</p>
+        <p>&copy; 2024 Nats. Tous droits réservés.</p>
     </footer>
 
     <script src="js/script.js"></script>
