--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,18 +13,18 @@
     
     <main id="main-content">
         <section class="content">
-            <h2>Contact Me</h2>
+            <h2>Réseaux Sociaux</h2>
             <p>
                 Email: <span id="email" class="copyable" data-email="natstrkpro@gmail.com"><span class="email-text">natstrkpro@gmail.com</span></span><br>
                 <br>Discord: <span id="discord" class="copyable" data-discord="nats.trk"><span class="discord-text">nats.trk</span></span>
             </p>
-            <a href="index.html" class="btn">Home</a>
-            <a href="about.html" class="btn">About</a>
+            <a href="index.html" class="btn">Accueil</a>
+            <a href="about.html" class="btn">Biographie</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Nats. All rights reserved.</p>
+        <p>&copy; 2024 Nats. Tous droits réservés.</p>
     </footer>
 
     <script src="js/script.js"></script>
