--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,19 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Home</h1>
+        <h1>Portfolio</h1>
     </header>
     
     <main id="main-content">
         <section class="content">
-            <h2>Works</h2>
-            <p>Oops ! Looks like this page is still under development. Stay tuned for future updates !</p>
-            <a href="about.html" class="btn">Learn more</a>
+            <h2>Travaux</h2>
+            <p>Portfolio en cours de développement.</p>
+            <a href="about.html" class="btn">En savoir plus</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Nats. All rights reserved.</p>
+        <p>&copy; 2024 Nats. Tous droits réservés.</p>
     </footer>
 
     <script src="js/script.js"></script>
